 
v1.2.0
-Fix: Nightvision not being cleared when player in water
-Change: New endium armour texture
-Change: End Stone Brick hardness
-Added: Emulator
-Change: slight changes to Ender Scythe and new textures
-Added: Blaze, Enderman and Zombie Pigman heads
-Added: Killing players with the scythe will now drop their heads

v1.2.1
-Fix: Block shifter and tile entities
-Change: new recipe for ender toggler

v1.3
-Added: Filter hoppers
-Added: New heads
-Added: Time Manipulator and Infused Gems
-Added: Entity Shifter

v1.4
-Added: Inventory Binder
-Added: Infinite Water Source
-Change: Condense Ender Pearls Brick and Block into one ID
-Change: New recipes for Infused Gems
-Change: New texture for filtering hoppers
-Change: Most of the abilities granted by the endium armour won't show on the inventory screen anymore
-Added: End Stone Brick walls and ender pearl brick walls
-Added: Endium Tools
-Added: Squid Head

v1.4.1
-Fix: Crash with Endium Tools

v1.4.2
-Fix: Works with SMP again

next version
-Added: Endium Armour now can be enchanted with repair from ThaumCraft 4