@@ -27,7 +27,6 @@ public class ModItems {
 	public static Item endiumPickaxe;
 	public static Item endiumAxe;
 	public static Item endiumShovel;
-	public static Item endiumNugget;
 
 	// Armour
 	public static Item endiumHelmet;
@@ -53,7 +52,6 @@ public class ModItems {
 		endiumPickaxe = new EndiumPickaxe();
 		endiumAxe = new EndiumAxe();
 		endiumShovel = new EndiumShovel();
-		endiumNugget = new EndiumNugget();
 
 		registerNames();
 		registerForge();
@@ -77,7 +75,6 @@ public class ModItems {
 		GameRegistry.registerItem(endiumPickaxe, Strings.ENDIUM_PICKAXE_NAME);
 		GameRegistry.registerItem(endiumAxe, Strings.ENDIUM_AXE_NAME);
 		GameRegistry.registerItem(endiumShovel, Strings.ENDIUM_SHOVEL_NAME);
-		GameRegistry.registerItem(endiumNugget, Strings.ENDIUM_NUGGET_NAME);
 	}
 
 	private static void registerForge() {
