@@ -37,3 +37,4 @@ v1.4.2
 
 next version
 -Added: Endium Armour now can be enchanted with repair from ThaumCraft 4
+-Added: Inproved compatibility with Thaumcraft (all items have aspects, and cooking endium on the infernal furnace gives you nuggets)
